RESOLVED FIXED131133
Sandbox violation in NetworkProcess when uploading a bundle
https://bugs.webkit.org/show_bug.cgi?id=131133
Summary Sandbox violation in NetworkProcess when uploading a bundle
Alexey Proskuryakov
Reported 2014-04-02 15:35:26 PDT
NetworkProcess tries to delete a generated zip itself, but it only has a sandbox extension for reading, so this fails. WebProcess does this anyway once upload is done.
Attachments
proposed fix (14.20 KB, patch)
2014-04-02 15:47 PDT, Alexey Proskuryakov
beidson: review+
patch for landing (14.05 KB, patch)
2014-04-02 17:09 PDT, Alexey Proskuryakov
no flags
patch for landing (14.05 KB, patch)
2014-04-02 22:21 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-04-02 15:47:43 PDT
Created attachment 228435 [details] proposed fix
WebKit Commit Bot
Comment 2 2014-04-02 15:50:44 PDT
Attachment 228435 [details] did not pass style-queue: ERROR: Source/WebCore/platform/network/FormData.h:42: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebCore/platform/network/FormData.h:45: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebCore/platform/network/FormData.h:65: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 3 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3 2014-04-02 17:09:15 PDT
Created attachment 228448 [details] patch for landing Anders told me that the keyed archiver encoder is currently unused, we use the old one for persistent storage too. So, need to encode the boolean.
WebKit Commit Bot
Comment 4 2014-04-02 17:10:49 PDT
Attachment 228448 [details] did not pass style-queue: ERROR: Source/WebCore/platform/network/FormData.h:42: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebCore/platform/network/FormData.h:45: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebCore/platform/network/FormData.h:65: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 3 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 5 2014-04-02 22:21:41 PDT
Created attachment 228463 [details] patch for landing Fixed a couple typos in comments.
WebKit Commit Bot
Comment 6 2014-04-02 22:59:56 PDT
Comment on attachment 228463 [details] patch for landing Clearing flags on attachment: 228463 Committed r166697: <http://trac.webkit.org/changeset/166697>
WebKit Commit Bot
Comment 7 2014-04-02 22:59:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.